add_subdirectory(arithmetic)
add_subdirectory(punctuation)
add_subdirectory(slot)
add_subdirectory(array)
add_subdirectory(detail)
add_subdirectory(tuple)
add_subdirectory(iteration)
add_subdirectory(variadic)
add_subdirectory(comparison)
add_subdirectory(list)
add_subdirectory(repetition)
add_subdirectory(config)
add_subdirectory(logical)
add_subdirectory(selection)
add_subdirectory(control)
add_subdirectory(facilities)
add_subdirectory(seq)

set(OST_IO_MSGPACK_PREPROCESSOR_HEADERS
debug.hpp
for.hpp
min.hpp
seq.hpp
arithmetic.hpp
dec.hpp
identity.hpp
if.hpp
punctuation.hpp
slot.hpp
array.hpp
empty.hpp
inc.hpp
repeat_2nd.hpp
stringize.hpp
assert_msg.hpp
enum.hpp
iterate.hpp
repeat_3rd.hpp
cat.hpp
enum_params.hpp
repeat_from_to_2nd.hpp
tuple.hpp
enum_params_with_a_default.hpp
iteration.hpp
repeat_from_to_3rd.hpp
comma.hpp
enum_params_with_defaults.hpp
library.hpp
repeat_from_to.hpp
variadic.hpp
comma_if.hpp
enum_shifted.hpp
limits.hpp
repeat.hpp
while.hpp
enum_shifted_params.hpp
wstringize.hpp
comparison.hpp
expand.hpp
list.hpp
repetition.hpp
expr_if.hpp
logical.hpp
selection.hpp
control.hpp
facilities.hpp
max.hpp
PARENT_SCOPE
)

set(OST_IO_MSGPACK_PREPROCESSOR_ARITHMETIC_HEADERS
${OST_IO_MSGPACK_PREPROCESSOR_ARITHMETIC_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_PREPROCESSOR_ARITHMETIC_DETAIL_HEADERS
${OST_IO_MSGPACK_PREPROCESSOR_ARITHMETIC_DETAIL_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_PREPROCESSOR_ARRAY_HEADERS
${OST_IO_MSGPACK_PREPROCESSOR_ARRAY_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_PREPROCESSOR_ARRAY_DETAIL_HEADERS
${OST_IO_MSGPACK_PREPROCESSOR_ARRAY_DETAIL_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_PREPROCESSOR_COMPARISON_HEADERS
${OST_IO_MSGPACK_PREPROCESSOR_COMPARISON_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_CONFIG_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_CONFIG_HEADERS}
PARENT_SCOPE
)
