add_subdirectory(array)
add_subdirectory(repetition)
add_subdirectory(arithmetic)
add_subdirectory(debug)
add_subdirectory(tuple)
add_subdirectory(punctuation)
add_subdirectory(slot)
add_subdirectory(iteration)
add_subdirectory(config)
add_subdirectory(control)
add_subdirectory(seq)
add_subdirectory(facilities)
add_subdirectory(selection)
add_subdirectory(variadic)
add_subdirectory(comparison)
add_subdirectory(detail)
add_subdirectory(logical)
add_subdirectory(list)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_HEADERS
empty.hpp
cat.hpp
library.hpp
repeat_from_to_2nd.hpp
control.hpp
iteration.hpp
identity.hpp
punctuation.hpp
assert_msg.hpp
expr_if.hpp
array.hpp
comma_if.hpp
dec.hpp
inc.hpp
for.hpp
repeat.hpp
selection.hpp
debug.hpp
repeat_from_to_3rd.hpp
comma.hpp
repeat_from_to.hpp
max.hpp
slot.hpp
repeat_2nd.hpp
enum_params_with_a_default.hpp
min.hpp
iterate.hpp
enum_shifted.hpp
enum_params_with_defaults.hpp
list.hpp
repetition.hpp
wstringize.hpp
logical.hpp
while.hpp
enum_params.hpp
comparison.hpp
facilities.hpp
stringize.hpp
enum.hpp
variadic.hpp
expand.hpp
tuple.hpp
enum_shifted_params.hpp
if.hpp
repeat_3rd.hpp
limits.hpp
seq.hpp
arithmetic.hpp
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_ARRAY_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_ARRAY_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_REPETITION_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_REPETITION_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_ARITHMETIC_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_ARITHMETIC_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_DEBUG_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_DEBUG_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_TUPLE_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_TUPLE_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_PUNCTUATION_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_PUNCTUATION_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_SLOT_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_SLOT_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_ITERATION_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_ITERATION_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_CONFIG_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_CONFIG_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_CONTROL_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_CONTROL_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_SEQ_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_SEQ_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_FACILITIES_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_FACILITIES_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_SELECTION_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_SELECTION_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_VARIADIC_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_VARIADIC_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_COMPARISON_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_COMPARISON_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_DETAIL_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_DETAIL_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_LOGICAL_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_LOGICAL_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_LIST_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_LIST_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_REPETITION_DETAIL_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_REPETITION_DETAIL_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_REPETITION_DETAIL_EDG_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_REPETITION_DETAIL_EDG_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_REPETITION_DETAIL_MSVC_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_REPETITION_DETAIL_MSVC_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_REPETITION_DETAIL_DMC_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_REPETITION_DETAIL_DMC_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_CONTROL_DETAIL_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_CONTROL_DETAIL_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_SEQ_DETAIL_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_SEQ_DETAIL_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_PUNCTUATION_DETAIL_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_PUNCTUATION_DETAIL_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_LIST_DETAIL_EDG_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_LIST_DETAIL_EDG_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_LIST_DETAIL_DMC_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_LIST_DETAIL_DMC_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_VARIADIC_DETAIL_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_VARIADIC_DETAIL_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_FACILITIES_DETAIL_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_FACILITIES_DETAIL_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_TUPLE_DETAIL_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_TUPLE_DETAIL_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_SLOT_DETAIL_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_SLOT_DETAIL_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_ARITHMETIC_DETAIL_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_ARITHMETIC_DETAIL_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_CONTROL_DETAIL_EDG_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_CONTROL_DETAIL_EDG_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_CONTROL_DETAIL_MSVC_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_CONTROL_DETAIL_MSVC_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_CONTROL_DETAIL_DMC_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_CONTROL_DETAIL_DMC_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_ARRAY_DETAIL_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_ARRAY_DETAIL_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_LIST_DETAIL_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_LIST_DETAIL_HEADERS}
PARENT_SCOPE
)

